# PointQA_Eval

./: .gitignore  README.md  main.py  pyproject.toml  recon_download.sh  requirements.txt  requirements_greenplm.txt  run_eval.sh  test.py
eval_results/shapellm/: results.json  summary.json
models/: __init__.py  base_qa_model.py  point_qa_model.py
models/dependence/3d-llava/llava/eval/: eval_scan2cap.py  eval_scanqa.py  eval_sqa3d.py  model_multi3drefer.py  model_scan2cap.py  model_scanrefer.py  model_sqa3d.py
models/dependence/3d-llava/llava/train/: llava_trainer.py  train.py
models/dependence/3d-r1/dataset/: scannet_base_dataset.py
models/dependence/3d-r1/models/: model_general.py
models/dependence/greenplm/llava/: __init__.py  constants.py  conversation.py  utils.py
models/dependence/greenplm/llava/eval/: model_vqa_loader.py
models/dependence/greenplm/llava/model/: __init__.py  builder.py  llava_arch.py
models/dependence/greenplm/llava/train/: llava_trainer.py  train.py  train_mem.py
models/dependence/minigpt3d/common/: config.py  eval_utils.py  logger.py  utils.py
models/dependence/minigpt3d/configs/models/: minigpt4_vicuna0____.yaml  minigpt_3d.yaml
models/dependence/minigpt3d/conversation/: conversation.py
models/dependence/minigpt3d/datasets/: data_utils.py
models/dependence/minigpt3d/eval_configs/: benchmark_evaluation_paper.yaml
models/dependence/minigpt3d/models/: __init__.py  base_model.py  minigpt_base.py  minigpt_v2.py
models/dependence/minigpt3d/processors/: blip_processors.py
models/dependence/minigpt3d/runners/: __init__.py  runner_base.py
models/dependence/minigpt3d/tasks/: __init__.py  base_task.py
models/dependence/pointbind/ckpts/: pointbind_i2pmae.pt  wget-log
models/dependence/pointllm/data/: modelnet.py  utils.py
models/dependence/pointllm/model/: pointllm.py
models/dependence/shapellm/: __init__.py
models/dependence/shapellm/llava/: mm_utils.py
models/dependence/threedllava/llava/: constants.py  mm_utils.py  utils.py
models/dependence/utils/: threedllava_utils.py
scripts/: activate_env.sh  setup_env.sh
what_distance_farthest/: tasks.jsonl  tasks_info.json
(+45 files in other folders)
