[project]
name = "pointqa-eval"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "absl-py==2.3.1",
    "accelerate>=1.12.0",
    "certifi>=2024.0.0,<2025.0.0",
    "charset-normalizer==3.4.4",
    "click==8.3.1",
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "decord>=0.6.0",
    "diskcache==5.6.3",
    "easydict==1.13",
    "einops==0.8.1",
    "filelock==3.20.0",
    "fire==0.7.1",
    "fonttools==4.61.0",
    "fsspec==2025.12.0",
    "future==1.0.0",
    "grpcio==1.76.0",
    "hf-xet==1.2.0",
    "huggingface-hub==0.25.2",
    "hydra-core==0.11.3",
    "idna==3.11",
    "iopath>=0.1.10",
    "jinja2==3.1.6",
    "joblib==1.5.2",
    "kiwisolver==1.4.9",
    "markdown==3.10",
    "markupsafe==3.0.3",
    "matplotlib==3.10.7",
    "mpmath==1.3.0",
    "networkx==3.6.1",
    "nltk==3.9.2",
    "numpy==2.3.5",
    "omegaconf==1.4.1",
    "open-clip-torch>=3.2.0",
    "open3d>=0.19.0",
    "opencv-python>=4.11.0.86",
    "packaging==25.0",
    "pandas>=2.3.3",
    "peft==0.10.0",
    "pillow==12.0.0",
    "plyfile==1.1.3",
    "protobuf==6.33.2",
    "psutil==7.1.3",
    "pycocoevalcap>=1.2",
    "pyparsing==3.2.5",
    "python-dateutil==2.9.0.post0",
    "pytorch-lightning==0.7.1",
    "pyyaml==6.0.3",
    "regex==2025.11.3",
    "requests==2.32.5",
    "safetensors==0.7.0",
    "scikit-learn==1.8.0",
    "scipy==1.16.3",
    "sentence-transformers==2.2.2",
    "sentencepiece==0.2.1",
    "six==1.17.0",
    "spconv>=2.3.8",
    "sympy==1.14.0",
    "tensorboard==2.20.0",
    "tensorboard-data-server==0.7.2",
    "termcolor==3.2.0",
    "threadpoolctl==3.6.0",
    "timm==1.0.22",
    "torch==2.9.1+cu130",
    "torch-geometric>=2.7.0",
    "torchaudio==2.9.1",
    "torchvision==0.24.1",
    "tqdm==4.67.1",
    "transformers==4.31.0",
    "triton==3.5.1",
    "typing-extensions==4.15.0",
    "urllib3==2.6.1",
    "uv==0.9.17",
    "wandb>=0.23.1",
    "webdataset>=1.0.2",
    "werkzeug==3.1.4",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu130"
